# CS180-Lyf180-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  addhabit.html  index.html  login.html  login.js  main.cpp  main.js  main.test.js  middleware.ts  motivational-quotes.cpp  package-lock.json  package.json  quotes.cpp  quotes.csv  randomQuote.cpp  randomQuote.h  script.js  server.cpp  server.js  sqlworkbench  style.css  tailwind.config.js  user.cpp
app/: globals.css  layout.tsx  page.tsx
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/auth/user/: route.ts
app/dashboard/: page.tsx
lib/: auth.ts
src/images/: plus.png:Zone.Identifier  plus.pngZone.Identifier
